chore: adding an unfinished UML diagram and basic unfinished files that define the endpoints.
